# wasmbenchserde

./: Cargo.toml  README.md  docker-compose.yml
html/: bench.html
native/: Cargo.toml
native/src/: main.rs
src/: lib.rs
