[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen  = "0.2"
web-sys       = { version = "0.3", features = ["console"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
rmp-serde     = "1.3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# opt-level = 3
lto = true

# wasm-pack build --release --target web